--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a-sky color="#ECECEC"></a-sky>
 
       <a-sky color="#ECECEC"></a-sky>
-  <a-entity camera="active:false;fov:50;near:0.05"></a-entity><a-entity camera="fov:50;near:0.05"></a-entity>
+    <a-entity camera="active:false;fov:50;near:0.05" position="3.761 1.614 6.331"></a-entity>
   </a-scene>
   </body>
 </html>
