--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
           <a-sky color="#ECECEC" position="0 0 0" rotation="0 0 0" scale="-1 1 1" visible="true" material="color:#ECECEC;shader:flat" geometry="primitive:sphere;radius:5000;segmentsWidth:64;segmentsHeight:20"></a-sky>
 
           <a-sky color="#ECECEC" position="0 0 0" rotation="0 0 0" scale="-1 1 1" visible="true" material="color:#ECECEC;shader:flat" geometry="primitive:sphere;radius:5000;segmentsWidth:64;segmentsHeight:20"></a-sky>
-      <canvas class="a-canvas a-grab-cursor" data-aframe-canvas="true" width="2400" height="1365" style="width: 1600px; height: 910px;"></canvas><a-entity camera="far:10000;fov:50;near:0.05;active:true" position="0 0 0" rotation="0 0 0" scale="1 1 1" visible="true"></a-entity></a-scene>
+      <canvas class="a-canvas a-grab-cursor" data-aframe-canvas="true" width="2400" height="1365" style="width: 1600px; height: 910px;"></canvas>
+      <a-entity camera="active:false;fov:50;near:0.05" position="3.761 1.614 6.331"></a-entity>
+    
+    </a-scene>
   </body>
 </html>
