--- a/index.html
+++ b/index.html
@@ -1923,16 +1923,18 @@
         material="color:#ffffff"
         geometry="primitive:box"
       ></a-box>
+      <!-- Ground -->
+      <a-assets>
+        <img id="floor" src="https://cdn.glitch.global/5880463c-b053-4410-9ddf-b07a6044ef1f/thumbnails%2FScreenshot%202023-09-29%20163617.png?1696019803003">
+      </a-assets>
       <a-plane
         position="4.026 0 8.191"
         rotation="-90 0 0"
-        width="4"
-        height="4"
-        color="#7BC8A4"
-        scale="1 1 1"
+        material="color:#ffffff;
+                  src:#floor;
+                  repeat:10 10;"
+        scale="10 10 1"
         visible="true"
-        material="color:#7BC8A4"
-        geometry="primitive:plane;width:4;height:4"
       ></a-plane>
 
       <a-sky
@@ -1954,14 +1956,6 @@
         material="color:#ECECEC;shader:flat"
         geometry="primitive:sphere;radius:5000;segmentsWidth:64;segmentsHeight:20"
       ></a-sky>
-      <!--<canvas class="a-canvas a-grab-cursor" data-aframe-canvas="true" width="2400" height="1365" style="width: 1600px; height: 910px;"></canvas>-->
-      <a-entity
-        camera="active:false;fov:50;near:0.05"
-        position="3.125 2.258 12.274"
-        rotation="0 0 0"
-        scale="1 1 1"
-        visible="true"
-      ></a-entity>
       <canvas
         class="a-canvas a-grab-cursor"
         data-aframe-canvas="true"
@@ -1969,10 +1963,10 @@
         height="1365"
         style="width: 1600px; height: 910px"
       ></canvas>
-      <a-entity
-        camera="active:false;fov:50;near:0.05"
-        position="3.761 1.614 6.331"
-      ></a-entity>
+      <a-entity position="3 1 8">
+        <a-camera user-height="2.5">
+        </a-camera>
+      </a-entity>
     </a-scene>
   </body>
 </html>
