--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       vr-mode-ui="enabled:true"
       auto-enter-vr="display:GearVR;enabled:true"
     >
-    <a-entity environment="preset: forest; groundColor: #445; grid: cross"></a-entity>
+    <a-entity environment></a-entity>
       <a-box
         position="-2.5 0.5 -2"
         rotation="0 0 0"
