--- a/index.html
+++ b/index.html
@@ -1925,6 +1925,7 @@
         material="color:#ffffff"
         geometry="primitive:box"
       ></a-box>
+      <a-entity environment="preset: forest; lightPosition: 1 5 -2"></a-entity>
       <a-entity position="3 1 8">
         <a-camera user-height="2.5">
         </a-camera>
