--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Hello, World! - A-Frame</title>
     <meta name="description" content="Hello, World! - A-Frame" />
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
   </head>
   <body class="a-body aframe-inspector-opened">
     <a-scene
@@ -16,6 +15,12 @@
       vr-mode-ui="enabled:true"
       auto-enter-vr="display:GearVR;enabled:true"
     >
+    <a-scene>
+      <a-assets>
+        <img id="sky" src="sindy-sussengut-CN-GdKQdxu8-unsplash.jpg">
+      </a-assets>
+      <a-sky src="#sky"></a-sky>
+    </a-scene>
       <a-box
         position="-2.5 0.5 -2"
         rotation="0 0 0"
@@ -1924,7 +1929,6 @@
         material="color:#ffffff"
         geometry="primitive:box"
       ></a-box>
-      <a-entity environment="preset: forest; lightPosition: 1 5 -2"></a-entity>
       <a-entity position="3 1 8">
         <a-camera user-height="2.5">
         </a-camera>
