--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       auto-enter-vr="display:GearVR;enabled:true"
     >
       <a-assets>
-        <img id="sky" src="sindy-sussengut-CN-GdKQdxu8-unsplash.jpg">
+        <img id="sky" src="Background desert.png">
       </a-assets>
       <a-sky src="#sky"></a-sky>
       <a-box
