--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta charset="utf-8" />
-    <title>Hello, World! - A-Frame</title>
-    <meta name="description" content="Hello, World! - A-Frame" />
+    <title>3D scene - A-Frame</title>
+    <meta name="LMC2700" content="3D scene - A-Frame" />
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
   </head>
-  <body class="a-body aframe-inspector-opened">
+  <body>
     <a-scene
       class="fullscreen"
       canvas=""
@@ -16,13 +15,64 @@
       auto-enter-vr="display:GearVR;enabled:true"
     >
       <a-assets>
-        <img id="sky" src="Background desert.png">
-        <img id="groundTexture" src="ground texture.jpg">
-      </a-assets>
-      <a-sky src="#sky"></a-sky>
-      <a-light type="ambient" color="#445451"></a-light>
-      <a-light type="point" intensity="2" position="2 4 4"></a-light>
-      <a-plane src="#groundTexture" rotation="-90 0 0" width="30" height="30" repeat="10 10"></a-plane>
+        <img
+          id="hardwood2_diffuse"
+          src="https://aframe.io/sample-assets/assets/images/wood/hardwood2_diffuse.jpg"
+          crossorigin="anonymous" /><img
+          id="fruit"
+          src="https://aframe.io/sample-assets/assets/images/illustration/758px-Canestra_di_frutta_(Caravaggio).jpg"
+          crossorigin="anonymous"
+      /></a-assets>
+      <a-sky
+        position="0 0 0"
+        rotation="0 0 0"
+        scale="-1 1 1"
+        visible="true"
+        material="color:#EBC2BD;shader:flat;src:#sky;fog:false"
+        geometry="primitive:sphere;radius:5000;segmentsWidth:64;segmentsHeight:20"
+      ></a-sky>
+      <a-light
+        type="ambient"
+        color="#445451"
+        position="0 0 0"
+        rotation="0 0 0"
+        scale="1 1 1"
+        visible="true"
+        light="type:ambient;color:#445451"
+      ></a-light>
+      <a-light
+        type="point"
+        intensity="1"
+        position="2 4 4"
+        rotation="0 0 0"
+        scale="1 1 1"
+        visible="true"
+        light="type:point;intensity:2"
+      ></a-light>
+      <a-plane
+        src="#groundTexture"
+        rotation="-90 0 0"
+        width="30"
+        height="30"
+        repeat="10 10"
+        position="0 0 0"
+        scale="1 1 1"
+        visible="true"
+        material="src:#hardwood2_diffuse;repeat:10 10;color:#eed8c4"
+        geometry="primitive:plane;width:30;height:30"
+      ></a-plane
+      ><a-plane
+        src="#groundTexture"
+        rotation="-90 0 0"
+        width="30"
+        height="30"
+        repeat="10 10"
+        position="0 0 0"
+        scale="1 1 1"
+        visible="true"
+        material="src:#hardwood2_diffuse;repeat:10 10;color:#eed8c4"
+        geometry="primitive:plane;width:30;height:30"
+      ></a-plane>
       <a-box
         position="-2.5 0.5 -2"
         rotation="0 0 0"
@@ -1932,8 +1982,7 @@
         geometry="primitive:box"
       ></a-box>
       <a-entity position="3 1 8">
-        <a-camera user-height="2.5">
-        </a-camera>
+        <a-camera user-height="2.5"> </a-camera>
       </a-entity>
     </a-scene>
   </body>
