--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="LMC2700" content="3D scene - A-Frame" />
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
   </head>
-  <body>
+  <body class="a-body aframe-inspector-opened">
     <a-scene
       class="fullscreen"
       canvas=""
@@ -110,7 +110,187 @@
         geometry="primitive:box"
       ></a-box
       ><a-box
+        position="8.845 0.5 -3.3"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.9 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="8.845 2.5 -3.3"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.9 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="8.845 4.5 -3.3"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.9 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="8.845 6.5 -3.3"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.9 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="8.845 8.5 -3.3"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.9 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="8.845 9.5 -3.3"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.9 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="8.845 7.5 -3.3"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.9 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="8.845 5.5 -3.3"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.9 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="8.845 3.5 -3.3"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.9 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="8.845 1.5 -3.3"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.9 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
         position="1.3 0.5 -3.6"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.8 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.985 0.5 -3.6"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.8 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.985 2.5 -3.6"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.8 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.985 4.5 -3.6"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.8 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.985 6.5 -3.6"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.8 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.985 8.5 -3.6"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.8 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.985 9.5 -3.6"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.8 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.985 7.5 -3.6"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.8 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.985 5.5 -3.6"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.8 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.985 3.5 -3.6"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.8 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.985 1.5 -3.6"
         rotation="0 0 0"
         color="#4CC3D9"
         scale="0.8 1 1"
@@ -128,7 +308,196 @@
         geometry="primitive:box"
       ></a-box
       ><a-box
+        position="7.284 0.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.284 2.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.284 4.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.284 6.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.284 8.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.284 9.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.284 7.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.284 9.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.284 5.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.284 3.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="7.284 1.5 -4"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.6 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
         position="2.55 0.5 -4.5"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.5 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.75 0.5 -4.5"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.5 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.75 2.5 -4.5"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.5 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.75 4.5 -4.5"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.5 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.75 6.5 -4.5"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.5 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.75 8.5 -4.5"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.5 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.75 9.5 -4.5"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.5 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.75 7.5 -4.5"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.5 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.75 5.5 -4.5"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.5 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.75 3.5 -4.5"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.5 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.75 1.5 -4.5"
         rotation="0 0 0"
         color="#4CC3D9"
         scale="0.5 1 1"
@@ -174,6 +543,96 @@
       ></a-box
       ><a-box
         position="2.94 0.5 -4.8"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.4 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.31 0.5 -4.8"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.4 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.31 2.5 -4.8"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.4 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.31 4.5 -4.8"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.4 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.31 6.5 -4.8"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.4 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.31 8.5 -4.8"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.4 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.31 9.5 -4.8"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.4 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.31 7.5 -4.8"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.4 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.31 5.5 -4.8"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.4 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.31 3.5 -4.8"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.4 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="6.31 1.5 -4.8"
         rotation="0 0 0"
         color="#4CC3D9"
         scale="0.4 1 1"
@@ -1055,7 +1514,7 @@
         geometry="primitive:box"
       ></a-box
       ><a-box
-        position="5.425 0.5 -5.9"
+        position="5.466 0.5 -5.959"
         rotation="0 0 0"
         color="#4CC3D9"
         scale="0.2 1 1"
@@ -1226,13 +1685,13 @@
         geometry="primitive:box;height:1"
       ></a-box
       ><a-box
-        position="5.69 1.5 -5.6"
+        position="5.69 1.49 -5.6"
         rotation="0 0 0"
         color="#4CC3D9"
         scale="0.25 0.9 1"
         visible="true"
         material="color:#ffffff;height:100;fog:false"
-        geometry="primitive:box;height:1"
+        geometry="primitive:box;height:1.1"
       ></a-box
       ><a-box
         position="5.69 2.5 -5.6"
@@ -1259,7 +1718,7 @@
         scale="0.25 1 1"
         visible="true"
         material="color:#000000"
-        geometry="primitive:box;height:1.17"
+        geometry="primitive:box;height:1"
       ></a-box
       ><a-box
         position="5.69 9.5 -5.6"
@@ -1268,7 +1727,7 @@
         scale="0.25 1 1"
         visible="true"
         material="color:#ffffff"
-        geometry="primitive:box;height:1.17"
+        geometry="primitive:box;height:1"
       ></a-box
       ><a-box
         position="3.29 1.5 -5.2"
@@ -1344,6 +1803,96 @@
       ></a-box
       ><a-box
         position="3.29 9.5 -5.2"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.3 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="5.96 9.5 -5.24"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.3 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="5.96 7.5 -5.24"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.3 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="5.96 5.5 -5.24"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.3 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="5.96 3.5 -5.24"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.3 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="5.96 1.5 -5.24"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.3 1 1"
+        visible="true"
+        material="color:#000000"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="5.96 0.5 -5.24"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.3 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="5.96 2.5 -5.24"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.3 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="5.96 4.5 -5.24"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.3 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="5.96 6.5 -5.24"
+        rotation="0 0 0"
+        color="#4CC3D9"
+        scale="0.3 1 1"
+        visible="true"
+        material="color:#ffffff"
+        geometry="primitive:box"
+      ></a-box
+      ><a-box
+        position="5.96 8.5 -5.24"
         rotation="0 0 0"
         color="#4CC3D9"
         scale="0.3 1 1"
@@ -1981,8 +2530,8 @@
         material="color:#ffffff"
         geometry="primitive:box"
       ></a-box>
-      <a-entity position="3 1 8">
-        <a-camera user-height="2.5"> </a-camera>
+      <a-entity position="2.7 1 7">
+        <a-camera user-height="2"> </a-camera>
       </a-entity>
     </a-scene>
   </body>
